fixed footer.ejs license

--- a/views/_partial/footer.ejs
+++ b/views/_partial/footer.ejs
@@ -3,7 +3,7 @@
 		<div class='pure-u-2-3'>
 			<div class='footer-content'>
 				<p><%- site.HOST.footer.text %></p>
-				<p></p>
+				<p><%- site.HOST.footer.license %></p>
 			</div>
 		</div>
 		<div class='pure-u-1-3'>
