fixed #14 relative link

--- a/views/_partial/user.ejs
+++ b/views/_partial/user.ejs
@@ -78,7 +78,7 @@
 		<% 
 			var text = '';
 			text += "<td class='status' data-res=" + sl[i].res + " data-sid=" + sl[i].sid + ">";
-			text += "<a href='detail/" + sl[i].sid + "'><span class='result" + sl[i].res + "'>" + judge_res[(sl[i].res+judge_res.length)%judge_res.length] + "</span>";
+			text += "<a href='/detail/" + sl[i].sid + "'><span class='result" + sl[i].res + "'>" + judge_res[(sl[i].res+judge_res.length)%judge_res.length] + "</span>";
 			if (sl[i].res != 0 && sl[i].res != 1 && sl[i].res != 8) {
 				text += " (";
 				if (sl[i].res != 7) {
