--- a/public/stylesheets/pure-release-0.6.0/slide-menu-dark.css
+++ b/public/stylesheets/pure-release-0.6.0/slide-menu-dark.css
@@ -10,7 +10,7 @@
   unicode-range: U+4E00-9FFF;
 }
 body {
-    color: #999;
+    color: #DDD;
     background-color: #252423;
     font-family: "Times New Roman", "Georgia", "Helvetica Neue", "Helvetica", "Microsoft YaHei", "WenQuanYi Micro Hei", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
