fixed #12 add contest rule description

--- a/views/_partial/contest.ejs
+++ b/views/_partial/contest.ejs
@@ -29,14 +29,8 @@
 	</ul>
 </div>
 
-<h2 id="-">考試規則</h2>
-	<ul>
-	<li>務必攜帶學生證到場考試。</li>
-	<li>考試期間無法開啟之前上傳的程式碼並禁用外部網路。</li>
-	<li>考試可以攜帶任何紙本參考資料，禁止使用電子產品或儲存裝置，如果需要字典請向助教索取。</li>
-	<li>每一題最多能上傳 15 次。某一題上傳多於 15 次，該題將不予計分 (仍然提供上傳以應變特殊情況)。</li>
-	<li>請勿將帳號轉交給其他人代考，遭查獲作弊者將依校規嚴懲。</li>
-	</ul>
+<%- contest_rule_desc %>
+
 <% if (sysmsg.length != 0) { %>
 	<h2><div class="sysmsg"><%- sysmsg %></div></h2>
 <% } else { %>
