--- a/views/admin/_partial/widget/nav.ejs
+++ b/views/admin/_partial/widget/nav.ejs
@@ -2,19 +2,19 @@
 
 <ul class="pure-menu-list">
     <li class="pure-menu-item">
-        <a class="pure-menu-link" href='/admin/announcement'><%= __('Edit Announcement') %></a>
+        <a class="pure-menu-link" href='/admin/announcement'><%= __('Announcement') %></a>
     </li>
     <li class="pure-menu-item">
-        <a class="pure-menu-link" href='/admin/problems'><%= __('Manage Problem Set') %></a>
+        <a class="pure-menu-link" href='/admin/problems'><%= __('Problem Set') %></a>
     </li>
     <li class="pure-menu-item">
-        <a class="pure-menu-link" href='/admin/contests'><%= __('Manage Contest') %></a>
+        <a class="pure-menu-link" href='/admin/contests'><%= __('Contest') %></a>
     </li>
     <li class="pure-menu-item">
-        <a class="pure-menu-link" href='/admin/accounts'><%= __('Manage Account') %></a>
+        <a class="pure-menu-link" href='/admin/accounts'><%= __('Account') %></a>
     </li>
     <li class="pure-menu-item">
-        <a class="pure-menu-link" href='/admin/grade'><%= __('Manage Grade') %></a>
+        <a class="pure-menu-link" href='/admin/grade'><%= __('Grade') %></a>
     </li>
 </ul>
 
