prototype about problem edit & list order by time

--- a/views/admin/_partial/contests.ejs
+++ b/views/admin/_partial/contests.ejs
@@ -36,7 +36,9 @@
 				<td><a href="/contest/<%- contest.cid %>"><%- contest.ttl %></a></td>
 				<td><%- config.unitConvert('date', new Date(contest.ts1)) %></td>
 				<td><%- config.unitConvert('date', new Date(contest.ts2)) %></td>
-				<td> <a class="pure-button pure-button-primary" href="/admin/edit/contest/<%- contest.cid %>"><i class="fa fa-cog"></i> <%= __('Edit') %></a></td>
+				<td>
+				<a class="pure-button pure-button-primary" href="/admin/edit/contest/<%- contest.cid %>"><i class="fa fa-cog"></i> <%= __('Edit') %></a>
+				</td>
 			</tr>
 			<% } %>
 		</tbody>
