fixed #13 add rejudge

--- a/views/admin/_partial/problems.ejs
+++ b/views/admin/_partial/problems.ejs
@@ -37,7 +37,7 @@
 					<a class="" href="/admin/edit/problem/<%- prob.pid%>"><i class="fa fa-cog"></i></a>
 				</span> | 
 				<span>
-					<a class="pid-rejudge" href="#"><i class="fa fa-refresh"></i></a>
+					<a class="pid-rejudge" href="/admin/api/rejudge?pid=<%- prob.pid %>"><i class="fa fa-refresh"></i></a>
 				</span> |
 				<span>
 					<a class="pid-delete" href="#"><i class="fa fa-trash"></i></a>
