--- a/views/admin/_partial/problems.ejs
+++ b/views/admin/_partial/problems.ejs
@@ -37,10 +37,10 @@
 					<a class="" href="/admin/edit/problem/<%- prob.pid%>"><i class="fa fa-cog"></i></a>
 				</span> | 
 				<span>
-					<a class="pid-rejudge" href="/admin/api/rejudge?pid=<%- prob.pid %>"><i class="fa fa-refresh"></i></a>
+					<a class="pid-rejudge" href="/admin/api/rejudge?pid=<%- prob.pid %>" title="重測所有上傳程式碼"><i class="fa fa-refresh"></i></a>
 				</span> |
 				<span>
-					<a class="pid-delete" href="#"><i class="fa fa-trash"></i></a>
+					<a class="pid-delete" href="#" title="刪除問題"><i class="fa fa-trash"></i></a>
 				</span>
 				</td>
 			</tr>
