--- a/views/admin/_partial/contest.ejs
+++ b/views/admin/_partial/contest.ejs
@@ -1,3 +1,6 @@
+<link rel="stylesheet" href="/stylesheets/DateTimePicker.css">
+<script type="text/javascript" src="/javascripts/DateTimePicker.js"></script>
+
 <div class="header">
 	<h1 class='article-title'><%= __('Edit Contest') %></h1>
     <h2><%- contest_config.config.cid %>. <%- contest_config.config.ttl %></h2>
@@ -38,11 +41,13 @@
                <div class="pure-g">
                     <div class="pure-u-1-2">
                         <label for="pid"><%= __('Start Date') %></label>
-                        <input class="pure-u-23-24" type="text" name="ts1" id="ts1" value="<%- new Date(contest_config.config.ts1) %>" >
+                        <input class="pure-u-23-24" type="text" name="ts1" id="ts1" value="<%- site.unitConvert('date', new Date(contest_config.config.ts1)) %>" data-field="datetime" data-format="yyyy/MM/dd HH:mm:ss">
+                        <div id="dts1Box"></div>
                     </div>
                     <div class="pure-u-1-2">
                         <label for="pub"><%= __('End Date') %></label>
-                        <input class="pure-u-23-24" type="text" name="ts2" id="ts2" value="<%- new Date(contest_config.config.ts2) %>" >
+                        <input class="pure-u-23-24" type="text" name="ts2" id="ts2" value="<%- site.unitConvert('date', new Date(contest_config.config.ts2)) %>" data-field="datetime" data-format="yyyy/MM/dd HH:mm:ss">
+                        <div id="dts2Box"></div>
                     </div>
                     
                 </div>
@@ -160,5 +165,18 @@ $(document).delegate('#textbox', 'keydown', function(e) {
     $(this).get(0).selectionStart =
     $(this).get(0).selectionEnd = start + 1;
   }
+});
+
+$(document).ready(function() {  
+     $("#dts1Box").DateTimePicker({
+        defaultDate: new Date('<%- new Date(contest_config.config.ts1) %>'),
+        dateTimeFormat: "yyyy/MM/dd HH:mm:ss",
+        dateSeparator: '/'
+     });
+     $("#dts2Box").DateTimePicker({
+        defaultDate: new Date('<%- new Date(contest_config.config.ts2) %>'),
+        dateTimeFormat: "yyyy/MM/dd HH:mm:ss",
+        dateSeparator: '/'
+     });
 });
 </script>
