--- a/views/_partial/head.ejs
+++ b/views/_partial/head.ejs
@@ -2,10 +2,11 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<title><%= site.HOST.TITLE %>
+		<title>
 			<% if (typeof subtitle !== 'undefined') { %>
-				<%= subtitle ? ' | ' + subtitle : '' %>
+				<%= subtitle ? subtitle + ' | ' : '' %>
 			<% } %>
+			<%= site.HOST.TITLE %>
 		</title>
 		<!-- <link rel="stylesheet" type="text/css" href="/stylesheets/style.css" /> -->
 		<link rel="stylesheet" href="/stylesheets/pure-release-0.6.0/pure-min.css">
