--- a/views/_partial/livesubmission.ejs
+++ b/views/_partial/livesubmission.ejs
@@ -32,32 +32,22 @@
 				<tbody>
 				</tbody>
 			</table>
-			<div class="pure-g">
-					<%
-						var page = query_filter['page'];
-						var arg_query = '';
-						if (query_filter['uid'] != undefined)
-							arg_query += '&uid=' + query_filter['uid'];
-						if (query_filter['pid'] != undefined)
-							arg_query += '&pid=' + query_filter['pid'];
-						if (query_filter['cid'] != undefined)
-							arg_query += '&cid=' + query_filter['cid'];
-					%>
-					 <div class="pure-u-6-24">
-					<% if (page != undefined && page != null && parseInt(page) > 1) { %>
-						<a class="pure-button pure-button-primary" style="width:100%" rel="prev" href="/live?page=<%- parseInt(page)-1 %>">« Prev</a>
-					<% } else { %>
-						<a class="" style="width:100%"></a>
-					<% } %>
-					</div><div class="pure-u-12-24"></div>
-					<div class="pure-u-6-24">
-					<% if (page == undefined || page == null) { %>
-						<a class="pure-button pure-button-primary" style="width:100%" rel="next" href="/live?page=2<%- arg_query %>">Next »</a>
-					<% } else { %>
-						<a class="pure-button pure-button-primary" style="width:100%" rel="next" href="/live?page=<%- parseInt(page)+1 %><%- arg_query %>">Next »</a>
-					<% } %>
-					</div>
-			</div>
+			<%
+				var page = query_filter['page'],
+					totpage = 9999;
+				var arg_query = '';
+				if (query_filter['uid'] != undefined)
+					arg_query += '&uid=' + query_filter['uid'];
+				if (query_filter['pid'] != undefined)
+					arg_query += '&pid=' + query_filter['pid'];
+				if (query_filter['cid'] != undefined)
+					arg_query += '&cid=' + query_filter['cid'];
+				if (page == undefined || page == null)
+					page = 1;
+				else
+					page = parseInt(page);
+			%>
+			<%- include('pagination', {page: page, url: '/live?page=', query: arg_query, totpage: totpage})%>
 			<script>
 			(function($) {
 			    "use strict";
