--- a/views/_partial/widget/submission_table.ejs
+++ b/views/_partial/widget/submission_table.ejs
@@ -39,15 +39,15 @@
 				<tr class='normal'>
 					<td class='sid'><%- sl[i].sid %></td>
 					<td><%- sl[i].pid %></td>
-					<td class='problem-title'><a href='problem/<%- sl[i].cid %>/<%- sl[i].pid %>'><%- sl[i].ttl %></a></td>
-					<td><a href='user/<%- sl[i].uid %>'><%- sl[i].lgn %></td>
+					<td class='problem-title'><a href='/problem/<%- sl[i].cid %>/<%- sl[i].pid %>'><%- sl[i].ttl %></a></td>
+					<td><a href='/user/<%- sl[i].uid %>'><%- sl[i].lgn %></td>
 					<% 
 						var text = '';
 						var judge_res = site.JUDGE_res,
 						    judge_lng = site.JUDGE_lng;
 						var unitConvert = site.unitConvert;
 						text += "<td class='status' data-res=" + sl[i].res + " data-sid=" + sl[i].sid + ">";
-						text += "<a href='detail/" + sl[i].sid + "'><span class='result" + sl[i].res + "'>" + judge_res[(sl[i].res+judge_res.length)%judge_res.length] + "</span>";
+						text += "<a href='/detail/" + sl[i].sid + "'><span class='result" + sl[i].res + "'>" + judge_res[(sl[i].res+judge_res.length)%judge_res.length] + "</span>";
 						if (sl[i].res != 0 && sl[i].res != 1 && sl[i].res != 8) {
 							text += " (";
 							if (sl[i].res != 7) {
