--- a/views/_partial/livesubmission.ejs
+++ b/views/_partial/livesubmission.ejs
@@ -16,6 +16,14 @@
 <% if (site.CONTEST_MODE == true) { %>
 	<div class="sysmsg">考試正在進行</div>
 <% } %>
+<div class="pure-g">
+	<div class="pure-u-1-1">
+		<%- include('widget/chat_panel') %>
+	</div>
+</div>
+
+<p></p>
+
 <script src="/javascripts/jquery.timeago.js"></script>
 			<table id='live-submission' class="pure-table pure-table-bordered" style="width: 100%">
 				<thead>
