--- a/views/admin/_partial/contest.ejs
+++ b/views/admin/_partial/contest.ejs
@@ -61,11 +61,26 @@
                     var prob_arr = [];
                     for (row in contest_config.problem)
                         prob_arr.push(contest_config.problem[row].pid);
+                    var refprob_arr = [];
+                    for (row in contest_config.refproblem)
+                        refprob_arr.push(contest_config.refproblem[row].pid);
                %>
                <div class="pure-g">
                     <div class="pure-u-1-1">
                         <label for="pid"><%= __('Problem ID') %></label>
                         <input class="pure-u-23-24" type="text" name="pid" id="pid" value="<%- prob_arr.join(',') %>" >
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="pure-g">
+            <div class="pure-u-1-1">
+               <legend><%= __('Reference') %></legend>
+               <div class="pure-g">
+                    <div class="pure-u-1-1">
+                        <label for="refpid"><%= __('Refer Problem ID') %></label>
+                        <input class="pure-u-23-24" type="text" name="refpid" id="refpid" value="<%- refprob_arr.join(',') %>" >
                     </div>
                 </div>
             </div>
