modify chat block

--- a/views/_partial/widget/chat_panel.ejs
+++ b/views/_partial/widget/chat_panel.ejs
@@ -2,14 +2,20 @@
 <% if (!(user == undefined || user == null || user.uid == undefined)) { %>
 <script src="/javascripts/jquery.timeago.js"></script>
 <div class="pure-g">
-    <div class="pure-u-1-1">
+    <div class="pure-u-4-5">
         <div class="panel-body" id="chat">
             <ul class="chat">
                 
             </ul>
         </div>
     </div>
-
+    <div class="pure-u-1-5">
+        <div class="panel-body">
+            <ul id="chat-list">
+                
+            </ul>
+        </div>
+    </div>
 
     <div class="pure-u-1-1">
         <div class="panel-footer">
