--- a/views/_partial/head.ejs
+++ b/views/_partial/head.ejs
@@ -22,9 +22,11 @@
 		<script src="/javascripts/jquery.cookie.js"></script> 
 		<script src="/javascripts/jquery.countdown.min.js"></script>
 		<script src="/javascripts/typed.js"></script>
+		<script src="/javascripts/diagram/raphael-min.js"></script>
 		<link rel="stylesheet" href="/stylesheets/terminal.css">
 	</head>
 	<body>
+		<script src="/javascripts/diagram/flowchart.js"></script>
 		<div id="layout">
 	    <!-- Menu toggle -->
 	    <a href="#menu" id="menuLink" class="menu-link">
