--- a/views/_partial/contests.ejs
+++ b/views/_partial/contests.ejs
@@ -3,78 +3,82 @@
     <h2>Contest comming soon.</h2>
 </div>
 <div class="content">
-			<% if (contest_list == null || contest_list.length == 0) { %>
-				<div class="sysmsg">NO AVAILABLE CONTEST</div>	
-			<% } else { %>
-				<table class="pure-table pure-table-bordered">
-					<thead>
-				        <tr>
-				            <th>#</th>
-				            <th><%= __('Contest Title') %></th>
-				            <th><%= __('Date') %></th>
-				            <th><%= __('Status') %></th>
-				            <th></th>
-				        </tr>
-				    </thead>
-				    <tbody>
-					<% 
-						var nowtime = new Date().getTime();
-						var unitConvert = site.unitConvert;
-					%>
-					<% for (var i = 0; i < contest_list.length; i++) { %>
-						<% 
-							var contest_status = '';
-							if (nowtime >= contest_list[i].ts2) { 
-								contest_status = 'closed';
-							} else if (nowtime < contest_list[i].ts1) {
-								contest_status = 'comming';
-							} else {
-								contest_status = 'running';
-							}
-							if (i % 2) {
-								contest_status += ' pure-table-odd';
-							}
-						%>
-						<tr class="<%- contest_status %>">
-							<td><%- contest_list[i].cid %></td>
-							<td>
-								<a href="contest/<%- contest_list[i].cid %>">
-									<%- contest_list[i].ttl %>
-								</a>
-							</td>
-							<td>
-								<%- unitConvert('date', new Date(contest_list[i].ts1)) %> ~
-								<%- unitConvert('date', new Date(contest_list[i].ts2)) %>
-							</td>
-							<td>
-								<% if (nowtime >= contest_list[i].ts2) { %>
-									<%= __('Closed') %>
-								<% } else if (nowtime < contest_list[i].ts1) { %>
-									<%= __('Comming') %>
-								<% } else { %>
-									<%= __('Running') %>
-								<% } %>
-							</td>
-							<td>
-								<% if (nowtime < contest_list[i].ts1) { %>
-								<div id="contest-clock<%- i%>" class='contest-clock'></div>
-								<script text='javascript'>
-									var d = new Date('<%- unitConvert('date', new Date(contest_list[i].ts1)) %>');
-									d.setTime(d.getTime() - get_clock_offset());
-									var ddstr = d.getFullYear() + "/" + (d.getMonth()+1) + "/" + d.getDate()  + " " + d.getHours() + ":" + d.getMinutes() + ":" + d.getSeconds();
-									$('#contest-clock<%- i%>').countdown(ddstr, function(event) {
-											var totalHours = event.offset.totalDays * 24 + event.offset.hours;
-											$(this).html(event.strftime(totalHours + ' hr %M min %S sec'));
-										});	
-								</script>
-								<% } %>
-							</td>
-						</tr>
-						
-					<% } %>
-				</tbody>
-				</table>
+<% if (contest_list == null || contest_list.length == 0) { %>
+	<div class="sysmsg">NO AVAILABLE CONTEST</div>	
+<% } else { %>
+<div class="pure-g">
+	<div class="pure-u-1-1">
+		<table class="pure-table pure-table-bordered" style='width: 100%'>
+			<thead>
+		        <tr>
+		            <th>#</th>
+		            <th><%= __('Contest Title') %></th>
+		            <th><%= __('Date') %></th>
+		            <th><%= __('Status') %></th>
+		            <th></th>
+		        </tr>
+		    </thead>
+		    <tbody>
+			<% 
+				var nowtime = new Date().getTime();
+				var unitConvert = site.unitConvert;
+			%>
+			<% for (var i = 0; i < contest_list.length; i++) { %>
+				<% 
+					var contest_status = '';
+					if (nowtime >= contest_list[i].ts2) { 
+						contest_status = 'closed';
+					} else if (nowtime < contest_list[i].ts1) {
+						contest_status = 'comming';
+					} else {
+						contest_status = 'running';
+					}
+					if (i % 2) {
+						contest_status += ' pure-table-odd';
+					}
+				%>
+				<tr class="<%- contest_status %>">
+					<td><%- contest_list[i].cid %></td>
+					<td>
+						<a href="contest/<%- contest_list[i].cid %>">
+							<%- contest_list[i].ttl %>
+						</a>
+					</td>
+					<td>
+						<%- unitConvert('date', new Date(contest_list[i].ts1)) %> ~
+						<%- unitConvert('date', new Date(contest_list[i].ts2)) %>
+					</td>
+					<td>
+						<% if (nowtime >= contest_list[i].ts2) { %>
+							<%= __('Closed') %>
+						<% } else if (nowtime < contest_list[i].ts1) { %>
+							<%= __('Comming') %>
+						<% } else { %>
+							<%= __('Running') %>
+						<% } %>
+					</td>
+					<td>
+						<% if (nowtime < contest_list[i].ts1) { %>
+						<div id="contest-clock<%- i%>" class='contest-clock'></div>
+						<script text='javascript'>
+							var d = new Date('<%- unitConvert('date', new Date(contest_list[i].ts1)) %>');
+							d.setTime(d.getTime() - get_clock_offset());
+							var ddstr = d.getFullYear() + "/" + (d.getMonth()+1) + "/" + d.getDate()  + " " + d.getHours() + ":" + d.getMinutes() + ":" + d.getSeconds();
+							$('#contest-clock<%- i%>').countdown(ddstr, function(event) {
+									var totalHours = event.offset.totalDays * 24 + event.offset.hours;
+									$(this).html(event.strftime(totalHours + ' hr %M min %S sec'));
+								});	
+						</script>
+						<% } %>
+					</td>
+				</tr>
+				
 			<% } %>
+		</tbody>
+		</table>
+	</div>
+</div>
+	<% } %>
 	<%
 		var totpage = Math.ceil(contest_size / 25);
 		var page = query_filter['page'];
