add domain level

--- a/views/_partial/problems.ejs
+++ b/views/_partial/problems.ejs
@@ -44,6 +44,12 @@
 </div>
 <div class="content">
 
+<div class="pure-menu pure-menu-horizontal">
+	<ul class="pure-menu-list">
+		<li class="pure-menu-item"><a class="pure-menu-link" href="/problems/domains">Domain</a></li>
+	</ul>
+</div>
+
 <div id="toc_wrapper" >
 	<span class="toc-button"><i class="fa fa-anchor"></i></span>
 	<ul id="nav" class="pure-table">
