--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -17,6 +17,10 @@
                     <%- include('_partial/progress') %>
                   <% } else if (layout == 'problems') { %>
                     <%- include('_partial/problems') %>
+                  <% } else if (layout == 'domains') { %>
+                    <%- include('_partial/domain') %>
+                  <% } else if (layout == 'problem_domain') { %>
+                    <%- include('_partial/problem-domain') %>
                   <% } else if (layout == 'submissions') { %>
                     <%- include('_partial/submissions') %>
                   <% } else if (layout == 'problem') { %>
