--- a/public/stylesheets/pure-release-0.6.0/slide-menu.css
+++ b/public/stylesheets/pure-release-0.6.0/slide-menu.css
@@ -651,3 +651,21 @@ Hides the menu at `48em`, but modify this based on your app's needs.
     transform: scale(1);
   }
 }
+.problem-item {
+  border-bottom: 1px solid #ddd;
+  border-left: 6px solid transparent;
+}
+.problem-item a {
+    text-decoration: none;
+}
+.problem-item .problem-score {
+    font-size: 4em;
+    margin: 0.2em 0 0;
+    font-weight: 100;
+}
+.content-subhead {
+    margin: 2em 0 1em 0;
+    font-weight: 300;
+    color: #888;
+    position: relative;
+}
