--- a/views/_partial/livesubmission.ejs
+++ b/views/_partial/livesubmission.ejs
@@ -78,7 +78,7 @@
 			    	function init(elem, options) {
 						$.ajax({
 						 	method: 'GET',
-						 	url: "http://" + options.ip + "/api/submission",
+						 	url: "https://" + options.ip + "/api/submission",
 							data: { limit: options.loadsubmit 
 								<% if (query_filter['uid'] != undefined) { %>
 									, uid: <%- query_filter['uid'] %>
@@ -175,7 +175,7 @@
 								if (result == 0 || result == 8) {
 									$.ajax({
 									 	method: 'GET',
-									 	url: "http://" + options.ip + "/api/result",
+									 	url: "https://" + options.ip + "/api/result",
 										data: { sid: sid },
 										timeout: options.updatetime/2,
 									}).done(function(submit_list) {
@@ -202,7 +202,7 @@
 			    		<% if (page == undefined || page == null || page == 1) { %>
 			    		$.ajax({
 						 	method: 'GET',
-						 	url: "http://" + options.ip + "/api/submission",
+						 	url: "https://" + options.ip + "/api/submission",
 							data: { limit: options.reloadsubmit 
 								<% if (query_filter['uid'] != undefined) { %>
 									, uid: <%- query_filter['uid'] %>
